name:                sumRecordsJson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/frontrow-jmccarr/sumRecordsJson#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff McCarrell
maintainer:          jmccarr@frontrowed.com
copyright:           Front Row Education
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SumRecordsJson
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , cases
                     , classy-prelude
                     , text
  default-language:    Haskell2010

test-suite sumRecordsJson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , aeson-qq
                     , sumRecordsJson
                     , hspec
                     , QuickCheck
  other-modules:       JsonSumRecordSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/frontrow-jmccarr/sumRecordsJson
